# scripting

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  justfile  mise.toml
.github/workflows/: pages.yml  rust.yml
desktop/: Cargo.toml  build.rs
desktop/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
public/: styles.css
runtime/: worker.js
src/: app.rs  bridge.rs  components.rs  driver.rs  lib.rs  main.rs  state.rs
src/components/: editor.rs  loader.rs  panel.rs  viewport.rs
worker/: Cargo.toml
worker/src/: lib.rs  state.rs  systems.rs
worker/src/systems/: scene.rs  setup.rs
