[package]
name = "worker"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
protocol = { path = "../protocol" }
nightshade-api = { version = "0.46.0", default-features = false, features = [
    "picking",
    "scripting",
] }
nightshade = { version = "0.46.0", features = ["tracing"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "=0.2.115"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "OffscreenCanvas",
    "Performance",
] }
